# minisignal

./: CMakeLists.txt  README.md  connection.h  main.cpp  signal.h
